# home-services

./: README.md  compose_wrap.sh  docker-compose.yaml  env.template
godns/: Dockerfile
godns/config/: config.template.yaml
home-assistant/config/: automations.yaml  configuration.yaml  scenes.yaml  scripts.yaml  secrets.yaml  secrets.yaml.template
pi-hole/config/: .gitignore  pihole-FTL.conf
swag/config/nginx/proxy-confs/: home-assistant.subdomain.conf  nextcloud.subdomain.conf  pihole.subdomain.conf
swag/config/nginx/site-confs/: default  default.conf
swag/config/www/: index.html
website/: .gitignore  .prettierrc.yaml  Cargo.toml  Dockerfile
website/html/: index.html
website/markdown/: index.md  lipsum.md
website/misc/: gen_shadow.py
website/src/: errors.rs  main.rs  markdown.rs  options.rs  posts.rs  rendering.rs  services.rs  shared_state.rs  static_content.rs  util.rs
website/src/services/: service.rs  status_check.rs  status_checker.rs
website/static/: base.css  shadows.css
website/templates/: base.hbs  base.html  error.html  index.html
