[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.13"
tower = "0.4.13"
mime_guess = "2.0.4"
thiserror = "1.0.31"
pulldown-cmark = { version = "0.9.1", features = ["simd"] }

[dependencies.clap]
features = ["derive", "env"]
version = "3.2.14"

[dependencies.tokio]
version = "1.20.0"
features = ["fs", "macros", "signal"]

[profile.release]
codegen-units = 1
lto = true
strip = true

[features]
default = ["debug"]
debug = ["axum/macros"] # Enable debug macros only in debug builds
