[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
axum = "0.6.0-rc.2"
futures = { version = "0.3.24", default-features = false }
handlebars = { version = "4.3.3", features = ["dir_source"] }
humantime = "2.1.0"
minify-html = "0.9.2"
once_cell = "1.15.0"
rand = "0.8.5"
reqwest = { version = "0.11.12", default-features = false, features = [
    "rustls-tls",
    "trust-dns",
] }
serde = "1.0.145"
serde_derive = { version = "1.0.145", features = ["deserialize_in_place"] }
serde_json = { version = "1.0.86", features = ["preserve_order"] }
tera = "1.17.1"
thiserror = "1.0.31"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.3.4", features = [
    "fs",
    "redirect",
    "trace",
    "catch-panic",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "tracing-log",
    "env-filter",
    "registry",
] }
trust-dns-resolver = "0.22.0"

[dependencies.clap]
features = ["derive", "env"]
version = "3.2.14"

[dependencies.tokio]
version = "1.20.0"
features = ["fs", "macros", "signal"]

[profile.release]
codegen-units = 1
lto = true
strip = true

[features]
default = ["debug"]
debug = ["axum/macros"] # Enable debug macros only in debug builds
