[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
axum = { version = "0.6.0-rc.2", default-features = false }
clap = { version = "4.0.15", features = ["derive", "env"] }
futures = { version = "0.3.24", default-features = false }
humantime = "2.1.0"
minify-html = "0.10.2"
once_cell = { version = "1.15.0", default-features = false }
rand = { version = "0.8.5", default-features = false }
reqwest = { version = "0.11.12", default-features = false, features = [
    "rustls-tls",
    "trust-dns",
] }
serde = { version = "1.0.145", default-features = false }
serde_derive = { version = "1.0.145", features = ["deserialize_in_place"] }
serde_json = { version = "1.0.86", default-features = false }
tera = { version = "1.17.1", default-features = false }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["fs", "macros", "signal"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.3.4", features = [
    "catch-panic",
    "fs",
    "redirect",
    "trace",
] }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "std",
    "tracing-log",
] }
trust-dns-resolver = "0.22.0"

[profile.release]
codegen-units = 1
lto = true
strip = true

[features]
default = ["debug"]
debug = ["axum/macros"] # Enable debug macros only in debug builds
